compiler/typ/tests/fixtures/diagnostics/0169_adt_record_field_int_bool_05.ml.infer.expected
File "0169_adt_record_field_int_bool_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0169_adt_record_field_int_bool_05 is not a valid module name.

File "0169_adt_record_field_int_bool_05.ml", line 2, characters 31-35:
2 | let _ : rec_epsilon = { size = true; open_ = true }
                                   ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
